--- a/LocalAiDemo/LocalAiDemo.Shared/_Imports.razor
+++ b/LocalAiDemo/LocalAiDemo.Shared/_Imports.razor
@@ -9,3 +9,4 @@
 @using Microsoft.Extensions.Logging
 @using LocalAiDemo.Shared.Services
 @using LocalAiDemo.Shared.Models
+@using LocalAiDemo.Shared.Components
